main.css
.contact {
    padding: 151px;
    background-color: rgb(33, 156, 239);
    color: white;  
}

footer {
    font-size: 52px;    
}

.linkedin {
    color: black;
}

.linkedin:hover {
    color: rgb(33, 156, 239);
}

.github {
    color: black;
}

.github:hover {
    color: rgb(33, 156, 239);
}



html, body {
    height: 100%;
}

.home {
    height: 100%;
    &::before {
        content: "";  
        background-image: url('images/chicago.jpg');
        background-size: cover;
        position: absolute;
        top: 0px;
        right: 0px;
        bottom: 0px;
        left: 0px;
        opacity: 0.60;
    }
} 

.else {
    position: relative;
}

#nav {
    position: fixed;
    width: 100%;
    transition: background-color 0.8s ease-out;
    display: flex;
    justify-content: space-between ;
    padding: 15px;
    font-size: 18px;
    opacity: 0.6;
    color: white;
    text-transform: uppercase;
}

#nav.scroll {
    background-color: white;
    font-size: 15px;
    color: rgb(33, 156, 239);
    opacity: 1;
    max-height: 50px;
}

a {
    font-weight: bold;
    color: white;
    text-decoration: none;
}

a.scroll {
    color: rgb(33, 156, 239);
    opacity: 1;
}

.dropdown:hover .drop-links {
    display: block;
}

.drop-links {
    display: none;
    font-size: 16px;
    padding-top: 20px;
}

.drop-links a {
    display: block;
    color: black
}

.drop-links a:hover {
    color: white;
}

.drop-links a:hover.scroll {
    background-color: #ddd;
}

#about {
    scroll-margin-top: 50px;
}

#drop1.scroll {
    color: black;
    font-size: 13px;
}

#projects {
    scroll-margin-top: 50px;
}

#drop2.scroll {
    color: black;
    font-size: 13px;
}

#i.scroll {
    color: black;
}

#i:hover.scroll {
    color: rgb(33, 156, 239);
}

.intro {
    height: 945px;
}

h1 {
    width: 600px;
}

.intro-text {
    font-size: 75px;
    font-weight: bold;
}

.line {
    border-bottom: solid rgb(33, 156, 239);
    border-width: 3px;
    width: 50px;
    margin-left: 235px;
}

p {
    font-size: 19px;
}

.intro-subtext {
    width: 600px;
}

.more-button {
    background-color: rgb(33, 156, 239);
    border: none;
    color: white;
    padding: 13px 25px;
    text-align: center;
    cursor: pointer;
    border-radius: 36px;
    font-weight: bold;
    font-size: 15px;
}

.more-button:hover {
    background-color: white;
    color: black;
}

.about {
    height: 880px;
    background-color: rgb(33, 156, 239);
    color: white;
}

.line2 {
    border-bottom: solid black;
    border-width: 3px;
    width: 50px;
    margin-left: 1095px;
}

.about-text {
    font-size: 18px;
}

.resume-button {
    background-color: white;
    border: none;
    color: black;
    padding: 13px 25px;
    text-align: center;
    cursor: pointer;
    border-radius: 36px;
    font-weight: bold;
    font-size: 15px;
    margin-right: 15px;
}

.resume-button:hover {
    background-color: black;
    color: white;
}

.projects {
    height: 880px;
    background-color: white;
    border: solid purple;
}




.name2 {
    min-width: 230px;
    margin-right: 10px;
}

input[type=text] {
    border: 3px solid #ddd;
    padding: 13px;
    outline: none;
}

input[type=text]:focus {
    border: 3px solid black;
}

label, input {
    font-weight: 500;
}

textarea[type=text] {
    border: 3px solid #ddd;
    padding: 10px;
    outline: none;
    margin: 1px;
    resize: none;
}

textarea[type=text]:focus {
    border: 3px solid black;
}

label, textarea {
    display: block;
    font-weight: 500;
}

.email2 {
    min-width: 230px;  
    margin-left: 10px;
}

.message {
    min-height: 200px;
    min-width: 482px;
}

.form-button {
    background-color: white;
    border: none;
    color: black;
    padding: 13px 25px;
    text-align: center;
    border-radius: 36px;
    font-weight: bold;
    font-size: 15px;
}

.form-button:hover {
    background-color: black;
    color: white;
}

/* 
    Page reload to top of page functionality
    Finalize padding for contact page
    Check chat icon leads to contact page
*/

